<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />
    <item
        android:id="@+id/navigation_picks"
        android:icon="@drawable/ic_player_picks"
        android:title="@string/menu_title_picks" />
    <item
        android:id="@+id/navigation_matchups"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_matchups" />
    <item
        android:id="@+id/navigation_players"
        android:icon="@drawable/ic_add_player"
        android:title="@string/menu_title_players" />

    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/menu_title_settings" />

</menu>
